1.7.0:
- Added support for 1.20.1.
- Fixed 1.20 support not working correctly.


1.6.0:
- Added support for 1.20.


1.5.0:
- Added support for 1.19.4.


1.4.1:
- Fixed an error when registering commands on legacy servers.


1.4.0:
- Added support for 1.19.3.
- Fixed toggles not working.
- Removed the 'show-self-holograms' option.


1.3.4:
- Fixed 1.3.3 not working on Spigot 1.19.2 servers (NMS mapping conflict with Paper).
- Fixed some grammar in the default configs comments.


1.3.3:
- Fixed indicators showing for zero damage events.
- Re-licensed the project under the GNU GPLv3 license.


1.3.2:
- Fixed indicators not disappearing when a player moves out of tracked range while it's alive.


1.3.1:
- Fixed indicators sometimes not disappearing after killing an entity.


1.3.0:
- Added option to let indicators move independently of the entity they came from (relative-holograms).
- Added option to show your own indicators (show-self-holograms).
- Fixed error when updating configs on legacy servers.
- Optimized how what players to send packets to is determined.


1.2.1:
- Fixed missing 1.17 support.


1.2.0:
- Added support for 1.19.
- Added bStats analytics.
- Added options to disable damage and heal indicators.
- Added '/di plinfo' for debugging purposes.
- Fixed config files not being regenerated under certain circumstances.
- Moved the 'messages.yml' contents to its own customizable locale file. Any changes will be migrated.


1.1.7:
- Added support for 1.18.2.


1.1.6:
- Fixed indicators not showing from player-shot arrows when 'only-show-entity-damage-from-players' is enabled.


1.1.5:
- Fixed the first damage a player does not showing an indicator.
- Fixed database requests not being run async.
- Toggle database now uses UUID's instead of names. All previous toggles will be lost.


1.1.4:
- Added support for 1.18.
- Fixed entity-type-list-as-whitelist being true by default.


1.1.3: