@@ -1,3 +1,7 @@
+1.x.x:
+- Fixed ArmorStand flicker on unsupported versions.
+
+
 1.7.0:
 - Added support for 1.20.1.
 - Fixed 1.20 support not working correctly.
